<resources>
    <string name="app_name">Box Studio</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="action_contact_us">Contact Us</string>
    <string name="title_activity_main_page">main_page</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_mainpage">mainpage</string>
    <string name="facebook">
        <a href="http://www.facebook.com">Like Us On FaceBook</a>
    </string>
    <string name="twitter">
        <a href="http://www.twitter.com">Follow us On Twitter</a>
    </string>
    <string name="youtube">
        <a href="http://www.youtube.com">Watch Us On Youtube</a>
    </string>
    <string name="instagram">
        <a href="http://www.instagrm.com">Follow Us On Instagram</a>
    </string>
    <string name="box_address">5th Rd, Halfway Gardens, Midrand, 1686 </string>
    <string name="web_address">
        <a href="www.boxstudioplus.co.za">www.boxstudioplus.co.za</a>
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_profile_fragment">Profile</string>
    <string name="title_schedule_fragment">Schedule</string>
    <string name="title_contact_us_fragment">Contact Us</string>
    <string name="title_booking_fragment">Bookings</string>
    <string name="box_logo">Logo</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="title_activity_login99">Sign in</string>

    <string name="action_button_profile">Profile</string>
    <string name="action_button_schedule">Schedule</string>
    <string name="action_button_booking">Bookings</string>
    <string name="action_button_about_us">About Us</string>
    <string name="action_button_logout">Logout</string>

    <string name="title_activity_schedule">Schedule</string>
    <string name="title_activity_booking">Workout Booking</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_registration">Register</string>
    <string name="title_activity_profile">Profile</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="fill_form">Please fill in you details</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="user_emoji">User emoji</string>
    <string name="box_studio_logo">Box Studio logo</string>

    <string name="box_studio_shared_pref">BoxStudioPref</string>
    <string name="box_studio_shared_pref_user">BoxStudioLoggedUser</string>
    <string name="box_studio_shared_pref_user_logged_in">LoggeIn</string>

    <string name="workout_booking">WorkOut Booking</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="cardio">Cardio</string>
    <string name="boxing">Boxing</string>
    <string name="submit">Submit</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="stretch">Stretch</string>
    <string name="yoga">Yoga</string>
    <string name="karate">Karate</string>
    <string name="error_messge">There was a problem, please try again.</string>

    <string name="content_description">box studio image</string>
    <string name="select_activities">Please select activity(ies)</string>
    <string name="booking_fill_form">Please fill in the form</string>

    <string name="schedule_heading">Upcoming Events</string>

</resources>
