<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.activities.BookingActivity"
    tools:showIn="@layout/activity_booking">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/graylight"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextBookingPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:singleLine="true"
            android:layout_margin="5dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editTextBookingEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:layout_margin="5dp"
            android:inputType="textEmailAddress" />

        <CheckBox
            android:id="@+id/checkBoxBookingKarate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/karate" />

        <CheckBox
            android:id="@+id/checkBoxBookingYoga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/yoga" />

        <CheckBox
            android:id="@+id/checkBoxBookingStretch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/stretch" />

        <CheckBox
            android:id="@+id/checkBoxBookingCardio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/cardio" />

        <CheckBox
            android:id="@+id/checkBoxBookingBoxing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/boxing" />

        <EditText
            android:id="@+id/editTextBookingNotes"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/additional_notes"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/buttonBookingSubmit"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:background="@drawable/shape"
            android:text="@string/submit"
            android:textColor="#FF1744"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>