<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/girlslide">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="150dp"
        android:layout_gravity="start"
        android:contentDescription="@string/box_studio_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boxstudiologo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/scheduleButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:text="@string/action_button_schedule"
            android:textAllCaps="false"
            android:textColor="@color/boxStudioRed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/bookingButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:text="@string/action_button_booking"
            android:textAllCaps="false"
            android:textColor="@color/boxStudioRed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />


        <Button
            android:id="@+id/profileButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:text="@string/action_button_profile"
            android:textAllCaps="false"
            android:textColor="@color/boxStudioRed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/aboutUsButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:text="@string/action_button_about_us"
            android:textAllCaps="false"
            android:textColor="@color/boxStudioRed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/shape"
            android:text="@string/action_button_logout"
            android:textAllCaps="false"
            android:textColor="@color/boxStudioRed"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>