<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/about_separator_color"
    tools:context=".Old.ui.main.PlaceholderFragment">

    <LinearLayout
        android:layout_width="596dp"
        android:layout_height="913dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:gravity="center"
        tools:layout_editor_absoluteX="8dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="189dp"
            android:src="@drawable/boxstudiologo" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/facebook" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/facebook"
            android:textAlignment="center"
            android:textColor="#3147C2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/twitter" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/twitter"
            android:textAlignment="center"
            android:textColor="#3147C2"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/instagram" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/instagram"
            android:textAlignment="center"
            android:textColor="#0B0B0C"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:src="@drawable/youtube" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:text="@string/youtube"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Location"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/map_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50">

         <!--   <com.google.android.gms.maps.MapView
                android:id="@+id/map1"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />-->

        </RelativeLayout>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>