<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/graylight"
    tools:context=".ui.activities.LoginActivity"
    tools:showIn="@layout/activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:srcCompat="@drawable/boxstudiologo"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/textViewLoginEmail"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="80dp"
                android:drawableLeft="@drawable/ic_action_user"
                android:ems="10"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:textColor="#000000"
                android:textColorHint="#FFE0E0E0" />

            <EditText
                android:id="@+id/textViewLoginPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_action_pass"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textColor="#0000"
                android:textColorHint="#FFE0E0E0" />

            <Button
                android:id="@+id/buttonLoginSubmit"
                android:layout_width="304dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:text="@string/action_sign_in"
                android:textStyle="bold"
                android:textSize="18sp"
                android:background="@drawable/box_studio_button_style"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.565"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLoginPassword"
                app:layout_constraintVertical_bias="0.161" />

            <!--Button
                android:id="@+id/buttonRegister"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/box_studio_button_style"
                android:text="@string/action_register"
                android:textSize="18sp"
                android:textStyle="bold" /-->

            <EditText
                android:id="@+id/textViewForgotPassword"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
